# threeandtwo

./: .gitignore  README.md  ThreeandTwo.py  pyproject.toml  requirement.txt
inputs/: best_parameters.json  initial_pull.py  pull_sportsdb.py
outputs/: mlb_2023_2024.csv  to_gsheets.py
pipeline/: elos.py  format_table.py  make_features.py  ml_model.py  optimise_elos.py
